--- a/build.gradle
+++ b/build.gradle
@@ -52,9 +52,9 @@ android {
 
         release {
             signingConfig signingConfigs.release
-            minifyEnabled false
-            debuggable true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            debuggable false
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 
